@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-05-10T08:23:06Z",
+  "timestamp" : "2024-05-10T16:24:29Z",
   "count_outdated" : 745,
   "uniques_outdated" : 364,
-  "count" : 749,
+  "count" : 750,
   "uniques" : 367,
   "clones" : [
     {
@@ -25,9 +25,9 @@
     },
     {
       "timestamp": "2024-05-10T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
